test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/add_two_pointers.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[28]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(x)
  =
  const int(0)
  ;
  int
  *
  identifier(y)
  =
  const int(0)
  ;
  return
  (
  identifier(x)
  +
  identifier(y)
  ==
  const int(0)
  )
  ;
  }
